<resources>
    <string name="app_name">Material Estimator</string>

    <!--SharedPreferences File names-->
    <string name="default_project_items_key">Default Project Items</string>
    <string name="projects_key">Projects</string>

    <!-- Default project items -->
    <string name="dropped_ceiling_key">Dropped Ceiling</string>
    <string name="drywall_ceiling_key">Drywall Ceiling</string>
    <string name="drywall_partition_key">Drywall Partition</string>
    <string name="selected_project_item_position_key">Selected Project Item Position</string>

    <!--Sample Project-->
    <string name="sample_project">Levy\'s Residence</string>

    <!--Menu Items-->
    <string name="action_settings">Settings</string>
    <string name="action_screen_shot">Screen Shot</string>
    <string name="action_help">Help</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_material_lists">Material Lists</string>
    <string name="action_views">Views</string>
    <string name="action_project_item_view">Project items view</string>
    <string name="action_material_list_view">Material List view</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>

    <string name="wastage_key" translatable="false">Wastage</string>
    <string name="wastage_title">Wastage</string>
    <string name="wastage_summary">The percentage of unusable left over material</string>

    <string name="default_panel_size_key" translatable="false">Default panel size</string>
    <string name="default_panel_size_title">Default panel size</string>
    <string name="default_panel_size_summary">Used together with "Screws per panel" to calculate Drywall screws quantity</string>

    <string name="screws_per_panel_key" translatable="false">Screws per panel</string>
    <string name="screws_per_panel_title">Screws per panel</string>
    <string name="screws_per_panel_summary">Enter number of screws per panel</string>

    <string name="furring_spacing_key" translatable="false">Furring channel spacing</string>
    <string name="furring_spacing_title">Furring channel spacing</string>
    <string name="furring_spacing_summary">The distance between furring channels</string>

    <string name="c_channel_spacing_key" translatable="false">C channel spacing</string>
    <string name="c_channel_spacing_title">"C" channel spacing</string>
    <string name="c_channel_spacing_summary">The distance between "C" channels</string>

    <string name="stud_spacing_key" translatable="false">Stud spacing</string>
    <string name="stud_spacing_title">Stud spacing</string>
    <string name="stud_spacing_summary">The distance between wall studs</string>

    <string name="setting_type_joint_compound_coverage_area_key" translatable="false">Setting type joint compound coverage area</string>
    <string name="setting_type_joint_compound_coverage_area_title">Setting type joint compound coverage area</string>
    <string name="setting_type_joint_compound_coverage_area_summary">How much sq.ft. (or m2) would one 18ib bag cover</string>

    <string name="all_purpose_joint_compound_coverage_area_key" translatable="false">All Purpose joint compound coverage area</string>
    <string name="all_purpose_joint_compound_coverage_area_title">All Purpose joint compound coverage area</string>
    <string name="all_purpose_joint_compound_coverage_area_summary">How much sq.ft. (or m2) would one 4.5gal. pail cover</string>

    <string name="wire_spacing_key" translatable="false">Wire spacing</string>
    <string name="wire_spacing_title">Wire spacing</string>

    <string name="average_wire_length_key" translatable="false">Average wire length</string>
    <string name="average_wire_length_title">Average wire length</string>
    <string name="average_wire_length_summary">The average distance from ceiling to support</string>

    <!--Nav Drawer-->
    <string name="nav_open">Navigation drawer is opened</string>
    <string name="nav_close">Navigation drawer is closed</string>
    <string name="nav_projects">Projects</string>
    <string name="nav_material_lists">Manage Material Lists</string>
    <string name="nav_trash">Trash</string>
    <string name="nav_settings">Settings</string>

    <!--ProjectsFragment-->
    <string name="projects_new_project_name_hint">Project name</string>
    <string name="projects_empty_view_title">Add a project</string>
    <string name="projects_empty_view_message">Click the + button to create your first project</string>

    <!--ProjectFragment-->
    <string name="project_date_created_text">Date Created:</string>
    <string name="project_description_text">Description</string>
    <string name="project_empty_view_title">Add items</string>
    <string name="project_empty_view_message1">
        Click the + button to add items.
    </string>
    <string name="project_empty_view_message2">
        Project items are the things that make up your project,
        eg. Living Room Ceiling, Drywall Partition etc.
    </string>

    <!--dialog-->
    <string name="add_project_dialog_title">Create New Project</string>

    <!--ProjectItemCreatorFragment-->
    <string name="projectItemCreatorFragment_title">Create new item</string>
    <string name="projectItemNameTVLabel">Name:</string>
    <string name="projectItemListNameTVLabel">Type:</string>
    <string name="calcBTN_text">Calculate</string>
    <string name="add_name_dialog_title">Add a name</string>
    <string name="select_project_item_type_dialog_title">Select an type</string>
    <string name="edit_icon_content_description">Press to calculate material quantity and cost.</string>
    <string name="select_list_icon_content_description">Press to select a material list.</string>
    <string name="quantityUnitPrice_format">%.2f pcs  @  %.2f</string>
    <string name="project_item_empty_view_title">Create project item</string>
    <string name="project_item_empty_view_message1">(1) Add project item name</string>
    <string name="project_item_empty_view_message2">(2) Select a material list.</string>
    <string name="project_item_empty_view_message3">(3) Enter dimensions.</string>
    <string name="project_item_empty_view_message4">(4) Calculate.</string>
    <string name="project_item_empty_view_message5">(5) Save.</string>
    <string name="project_item_empty_view_message6">
        NOTE: At step(4) you can edit the calculated quantities individually.
        You can also edit material lists and create new lists by navigating to Manage Lists.
    </string>

    <!--MaterialListsFragment-->
    <string name="material_lists_title">Material Lists</string>

    <!--misc-->
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="total">Total</string>
    <string name="select_material_list">Select Material List</string>
    <string name="list">List:</string>
    <string name="name">Name:</string>
    <string name="untitled">Untitled</string>
    <string name="double_2dp_format">%.2f</string>
    <string name="min_unit">in</string>
    <string name="max_feet">ft</string>
    <string name="title">Title</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="context_delete">Delete</string>

</resources>
