<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item android:id="@+id/action_project_item_view"
        android:icon="@drawable/ic_view_list_white_24dp"
        android:title="@string/action_project_item_view"
        app:showAsAction="never" />

    <item android:id="@+id/action_material_list_view"
        android:icon="@drawable/ic_format_list_bulleted_white_24dp"
        android:title="@string/action_material_list_view"
        app:showAsAction="never"/>
</menu>