<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/project_item_empty_view_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/empty_list_message1TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/project_item_empty_view_message1"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/empty_list_message2TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_item_empty_view_message2"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/empty_list_message3TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_item_empty_view_message3"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/empty_list_message4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_item_empty_view_message4"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/empty_list_message5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_item_empty_view_message5"
            android:textAlignment="viewStart" />

        <TextView
            android:id="@+id/empty_list_message6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/project_item_empty_view_message6" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>